# gggifcheck

./: README.md  setup.cfg  setup.py
gggifcheck/: __init__.py  fields.py  items.py
