[metadata]
name = gggifcheck
version = 0.0.6
author = kusen
author_email = hu1194542196@qq.com
description = 通用条目字段检查，适应于各种场景的使用。
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

url = https://github.com/kusen-alpha/gggifcheck
platforms = any
project_urls =
    Bug Tracker = https://github.com/kusen-alpha/gggifcheck/issues
    Documentation = https://github.com/kusen-alpha/gggifcheck/blob/master/README.md
    Source Code = https://github.com/kusen-alpha/gggifcheck
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: